<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:booker="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    booker:cardElevation="@dimen/list_item_elevation"
    booker:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/list_item_padding">

        <TextView
            android:id="@+id/ve_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/summary" />

        <TextView
            android:id="@+id/ve_organizer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/organizer" />

        <TextView
            android:id="@+id/ve_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_date" />

        <TextView
            android:id="@+id/ve_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_date" />

        <TextView
            android:id="@+id/ve_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status" />

    </LinearLayout>

</android.support.v7.widget.CardView>